--- a/gradle/dependency.gradle
+++ b/gradle/dependency.gradle
@@ -25,6 +25,8 @@ def versions = [
 
         support              : "27.0.2",
         constraint_layout    : "1.1.3",
+        lifecycle            : '1.1.1',
+        room                 : '1.1.1',
 
         rxjava               : "2.1.3",
         rxkotlin             : "2.3.0",
@@ -70,6 +72,23 @@ def support = [
         constraint_layout: "com.android.support.constraint:constraint-layout:$versions.constraint_layout",
 ]
 deps.support = support
+
+def lifecycle = [
+        extensions     : "android.arch.lifecycle:extensions:$versions.lifecycle",
+        viewmodel      : "android.arch.lifecycle:viewmodel:$versions.lifecycle",
+        livedata       : "android.arch.lifecycle:livedata:$versions.lifecycle",
+        runtime        : "android.arch.lifecycle:runtime:$versions.lifecycle",
+        compiler       : "android.arch.lifecycle:compiler:$versions.lifecycle",
+]
+deps.lifecycle = lifecycle
+
+def room = [
+        runtime : "android.arch.persistence:room-runtime:$versions.room",
+        compiler: "android.arch.persistence:room-compiler:$versions.room",
+        rxjava2 : "android.arch.persistence:room-rxjava2:$versions.room",
+]
+deps.room = room
+
 
 def rx = [
         rxjava   : "io.reactivex.rxjava2:rxjava:$versions.rxjava",
