--- a/gradle/base_config.gradle
+++ b/gradle/base_config.gradle
@@ -36,4 +36,9 @@ android {
     dexOptions {
         keepRuntimeAnnotatedClasses false
     }
+
+    dataBinding {
+        enabled true
+    }
+
 }
