--- a/gradle/dependency.gradle
+++ b/gradle/dependency.gradle
@@ -20,13 +20,19 @@ ext.app_config = app_config
 
 
 def versions = [
-        android_gradle_plugin: "3.3.2",
-        kotlin               : "1.3.30",
+        android_gradle_plugin: "3.4.1",
+        kotlin               : "1.3.31",
+        kotlin_coroutines    : "1.1.1",
 
-        support              : "27.0.2",
+        appcompat_V7         : "1.1.0-alpha05",
+        recyclerView         : "1.0.0",
+        annotations          : "1.1.0",
         constraint_layout    : "1.1.3",
-        lifecycle            : '1.1.1',
-        room                 : '1.1.1',
+
+        lifecycle            : "2.0.0",
+
+        runner               : "1.2.0",
+        espresso             : "3.2.0",
 
         rxjava               : "2.1.3",
         rxkotlin             : "2.3.0",
@@ -34,13 +40,12 @@ def versions = [
         rxbinding            : "3.0.0-alpha1",
 
         retrofit             : "2.3.0",
-        retrofit_fastjson    : "2.1.0",
+        moshi                : "1.8.0",
 
-        glide                : "4.9.0", // 4.8.0
+        glide                : "4.9.0",
         glide_okhttp3        : "1.5.0@aar",
 
-        runner               : "1.0.2",
-        espresso             : "3.0.2",
+        smart_refresh_layout : "1.1.0-andx-11",
 ]
 ext.versions = versions
 
@@ -50,44 +55,35 @@ ext.versions = versions
 
 def deps = [
         android_gradle_plugin: "com.android.tools.build:gradle:$versions.android_gradle_plugin",
-        fastjson             : "com.alibaba:fastjson:$versions.fastjson",
 ]
 
 
 def kotlin = [
-        stdlib    : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin",
-        plugin    : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
-        extensions: "org.jetbrains.kotlin:kotlin-android-extensions:$versions.kotlin",
+        stdlib            : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin",
+        plugin            : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
+        extensions        : "org.jetbrains.kotlin:kotlin-android-extensions:$versions.kotlin",
+        coroutines_core   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.kotlin_coroutines",
+        coroutines_android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.kotlin_coroutines",
 ]
 deps.kotlin = kotlin
 
+
 def support = [
-        supportV4        : "com.android.support:support-v4:$versions.support",
-        supportV13       : "com.android.support:support-v13:$versions.support",
-        appcompatV7      : "com.android.support:appcompat-v7:$versions.support",
-        cardview         : "com.android.support:cardview-v7:$versions.support",
-        recyclerView     : "com.android.support:recyclerview-v7:$versions.support",
-        design           : "com.android.support:design:$versions.support",
-        annotations      : "com.android.support:support-annotations:$versions.support",
-        constraint_layout: "com.android.support.constraint:constraint-layout:$versions.constraint_layout",
+        appcompatV7      : "androidx.appcompat:appcompat:$versions.appcompat_V7",
+        recyclerView     : "androidx.recyclerview:recyclerview:$versions.recyclerView",
+        annotations      : "androidx.annotation:annotation:$versions.annotations",
+        constraint_layout: "androidx.constraintlayout:constraintlayout:$versions.constraint_layout",
 ]
 deps.support = support
 
 def lifecycle = [
-        extensions     : "android.arch.lifecycle:extensions:$versions.lifecycle",
-        viewmodel      : "android.arch.lifecycle:viewmodel:$versions.lifecycle",
-        livedata       : "android.arch.lifecycle:livedata:$versions.lifecycle",
-        runtime        : "android.arch.lifecycle:runtime:$versions.lifecycle",
-        compiler       : "android.arch.lifecycle:compiler:$versions.lifecycle",
+        extensions     : "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle",
+        viewmodel      : "androidx.lifecycle:lifecycle-viewmodel:$versions.lifecycle",
+        livedata       : "androidx.lifecycle:lifecycle-livedata:$versions.lifecycle",
+        runtime        : "androidx.lifecycle:lifecycle-runtime:$versions.lifecycle",
+        compiler       : "androidx.lifecycle:lifecycle-compiler:$versions.lifecycle",
 ]
 deps.lifecycle = lifecycle
-
-def room = [
-        runtime : "android.arch.persistence:room-runtime:$versions.room",
-        compiler: "android.arch.persistence:room-compiler:$versions.room",
-        rxjava2 : "android.arch.persistence:room-rxjava2:$versions.room",
-]
-deps.room = room
 
 
 def rx = [
@@ -101,9 +97,16 @@ deps.rx = rx
 def retrofit = [
         runtime : "com.squareup.retrofit2:retrofit:$versions.retrofit",
         rxjava2 : "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit",
-        fastjson: "org.ligboy.retrofit2:converter-fastjson-android:$versions.retrofit_fastjson",
+        moshi   : "com.squareup.retrofit2:converter-moshi:$versions.retrofit",
 ]
 deps.retrofit = retrofit
+
+def moshi = [
+        moshi         : "com.squareup.moshi:moshi:$versions.moshi",
+        kotlin        : "com.squareup.moshi:moshi-kotlin:$versions.moshi",
+        kotlin_codegen: "com.squareup.moshi:moshi-kotlin-codegen:$versions.moshi",
+]
+deps.moshi = moshi
 
 def glide = [
         runtime : "com.github.bumptech.glide:glide:$versions.glide",
@@ -121,15 +124,23 @@ def test = [
 deps.test = test
 
 def espresso = [
-        core           : "com.android.support.test.espresso:espresso-core:$versions.espresso",
-        contrib        : "com.android.support.test.espresso:espresso-contrib:$versions.espresso",
-        web            : "com.android.support.test.espresso:espresso-web:$versions.espresso",
-        idling_resource: "com.android.support.test.espresso:espresso-idling-resource:$versions.espresso",
-        intents        : "com.android.support.test.espresso:espresso-intents:$versions.espresso",
-        remote         : "com.android.support.test.espresso:espresso-remote:$versions.espresso",
-        accessibility  : "com.android.support.test.espresso:espresso-accessibility:$versions.espresso",
+        core           : "androidx.test.espresso:espresso-core:$versions.espresso",
+        contrib        : "androidx.test.espresso:espresso-contrib:$versions.espresso",
+        web            : "androidx.test.espresso:espresso-web:$versions.espresso",
+        idling_resource: "androidx.test.espresso:espresso-idling-resource:$versions.espresso",
+        intents        : "androidx.test.espresso:espresso-intents:$versions.espresso",
+        remote         : "androidx.test.espresso:espresso-remote:$versions.espresso",
+        accessibility  : "androidx.test.espresso:espresso-accessibility:$versions.espresso",
 ]
 deps.espresso = espresso
+
+def ui = [
+        smart_refresh_layout: "com.scwang.smartrefresh:SmartRefreshLayout:$versions.smart_refresh_layout",
+        smart_refresh_header: "com.scwang.smartrefresh:SmartRefreshHeader:$versions.smart_refresh_layout",
+]
+deps.ui = ui
+
+
 
 
 
