--- a/gradle/dependency.gradle
+++ b/gradle/dependency.gradle
@@ -28,6 +28,7 @@ def versions = [
         recyclerView         : "1.0.0",
         annotations          : "1.1.0",
         constraint_layout    : "1.1.3",
+        material             : "1.0.0",
 
         lifecycle            : "2.0.0",
 
@@ -71,6 +72,7 @@ deps.kotlin = kotlin
 def support = [
         appcompatV7      : "androidx.appcompat:appcompat:$versions.appcompat_V7",
         recyclerView     : "androidx.recyclerview:recyclerview:$versions.recyclerView",
+        design           : "com.google.android.material:material:$versions.material",
         annotations      : "androidx.annotation:annotation:$versions.annotations",
         constraint_layout: "androidx.constraintlayout:constraintlayout:$versions.constraint_layout",
 ]
@@ -111,7 +113,7 @@ deps.moshi = moshi
 def glide = [
         runtime : "com.github.bumptech.glide:glide:$versions.glide",
         compiler: "com.github.bumptech.glide:compiler:$versions.glide",
-        okhttp3 : "com.github.bumptech.glide:okhttp3-integration:$versions.glide_okhttp3",
+        okhttp3 : "com.github.bumptech.glide:okhttp3-integration:$versions.glide",
 ]
 deps.glide = glide
 
