--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,14 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
+            android:name=".MomentsApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MomentsActivity">
+        <activity android:name=".ui.MomentsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
