--- a/gradle/dependency.gradle
+++ b/gradle/dependency.gradle
@@ -21,7 +21,7 @@ ext.app_config = app_config
 
 def versions = [
         android_gradle_plugin: "3.4.1",
-        kotlin               : "1.3.31",
+        kotlin               : "1.3.30",
         kotlin_coroutines    : "1.1.1",
 
         appcompat_V7         : "1.1.0-alpha05",
@@ -31,6 +31,7 @@ def versions = [
         material             : "1.0.0",
 
         lifecycle            : "2.0.0",
+        room                 : "2.1.0",
 
         runner               : "1.2.0",
         espresso             : "3.2.0",
@@ -63,6 +64,7 @@ def kotlin = [
         stdlib            : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin",
         plugin            : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
         extensions        : "org.jetbrains.kotlin:kotlin-android-extensions:$versions.kotlin",
+        reflect           : "org.jetbrains.kotlin:kotlin-reflect:$versions.kotlin",
         coroutines_core   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.kotlin_coroutines",
         coroutines_android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.kotlin_coroutines",
 ]
@@ -88,18 +90,23 @@ def lifecycle = [
 deps.lifecycle = lifecycle
 
 
-def rx = [
-        rxjava   : "io.reactivex.rxjava2:rxjava:$versions.rxjava",
-        rxkotlin : "io.reactivex.rxjava2:rxkotlin:$versions.rxkotlin",
-        rxandroid: "io.reactivex.rxjava2:rxandroid:$versions.rxandroid",
-        rxbinding: "com.jakewharton.rxbinding3:rxbinding:$versions.rxbinding",
+def room = [
+        runtime  : "androidx.room:room-runtime:$versions.room",
+        compiler : "androidx.room:room-compiler:$versions.room",
 ]
-deps.rx = rx
+deps.room = room
+
+def ktx = [
+        core      : "androidx.core:core-ktx:1.0.2",
+        viewmodel : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01",
+]
+deps.ktx = ktx
 
 def retrofit = [
         runtime : "com.squareup.retrofit2:retrofit:$versions.retrofit",
         rxjava2 : "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit",
         moshi   : "com.squareup.retrofit2:converter-moshi:$versions.retrofit",
+        scalars : "com.squareup.retrofit2:converter-scalars:2.5.0",
 ]
 deps.retrofit = retrofit
 
@@ -139,6 +146,9 @@ deps.espresso = espresso
 def ui = [
         smart_refresh_layout: "com.scwang.smartrefresh:SmartRefreshLayout:$versions.smart_refresh_layout",
         smart_refresh_header: "com.scwang.smartrefresh:SmartRefreshHeader:$versions.smart_refresh_layout",
+
+        bravh               : "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46",
+        ninegridview        : "com.lzy.widget:ninegridview:0.2.0",
 ]
 deps.ui = ui
 
