--- a/gradle/kotlin_support.gradle
+++ b/gradle/kotlin_support.gradle
@@ -13,6 +13,7 @@ android {
 
 dependencies {
     api deps.kotlin.stdlib
+    api deps.kotlin.reflect
     api deps.kotlin.coroutines_core
     api deps.kotlin.coroutines_android
 }
