--- a/gradle/dependency.gradle
+++ b/gradle/dependency.gradle
@@ -33,6 +33,8 @@ def versions = [
         lifecycle            : "2.0.0",
         room                 : "2.1.0",
 
+        anko                 : "0.10.8",
+
         runner               : "1.2.0",
         espresso             : "3.2.0",
 
@@ -101,6 +103,12 @@ def ktx = [
         viewmodel : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01",
 ]
 deps.ktx = ktx
+
+def anko = [
+        anko    : "org.jetbrains.anko:anko:$versions.anko",
+        commons : "org.jetbrains.anko:anko-commons:$versions.anko",
+]
+deps.anko = anko
 
 def retrofit = [
         runtime : "com.squareup.retrofit2:retrofit:$versions.retrofit",
