add nine grid view add network api

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation deps.ui.bravh
     implementation deps.ui.ninegridview
 
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
