--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.3.50'
+
 
     apply from: './gradle/dependency.gradle'
 
@@ -10,8 +12,10 @@ buildscript {
         classpath deps.android_gradle_plugin
         classpath deps.kotlin.plugin
         classpath deps.kotlin.extensions
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
+
+    
     }
-}
 
 allprojects {
 
