--- a/gradle/dependency.gradle
+++ b/gradle/dependency.gradle
@@ -20,7 +20,7 @@ ext.app_config = app_config
 
 
 def versions = [
-        android_gradle_plugin: "3.4.1",
+        android_gradle_plugin: '3.6.1',
         kotlin               : "1.3.30",
         kotlin_coroutines    : "1.1.1",
 
